--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -14,6 +14,7 @@
 @import "section/_home";
 @import "section/_sidebar";
 @import "section/_footer";
+@import "section/_desktop";
 @import "_base.scss";
 
 // components
