--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,3 +1,6 @@
+a {
+  color: $color-white;
+}
 .base {
 	color: $color-white;
 }
@@ -45,8 +48,5 @@
 }
 
 .base {
-  a:hover, a:active { outline: none; }
-  a, a:active, a:visited { color: #607890; }
-  a:hover, a:focus { color: #036; }
-  a:link { -webkit-tap-highlight-color: #FF5E99; }
+
 }
