update header to new styles

--- a/sass/_defaults.scss
+++ b/sass/_defaults.scss
@@ -11,7 +11,7 @@ $color-black: #000;
 $color-tan: #edece0;
 $color-light-brown: #c5c4b2;
 $color-dark-brown: #5e5c43;
-$color-brown: #755a31;
+$color-brown: #1b1a17;
 
 @mixin border-radius($radius) {
   -webkit-border-radius: $radius;
