--- a/sass/section/_header.scss
+++ b/sass/section/_header.scss
@@ -1,6 +1,6 @@
 .header {
 	padding: 5px 0 0;
-	background: darken($color-brown, 10%);
+	background: $color-brown;
 	// border-bottom: darken($color-brown, 30%);
   a {
     color: $color-white;
@@ -9,11 +9,7 @@
   p a {
     text-decoration: underline;
   }
-  h1 {
-    font-size: 14px;
-    letter-spacing: 0.33em;
-    text-transform: uppercase;
-    text-align: center;
+  h1 a {
   }
   .explain {
     position: absolute;
@@ -31,6 +27,36 @@
     span {
       display: none;
     }
+  }
+  .logo {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 35px;
+    text-indent: -99999px;
+    margin: 0;
+    a {
+      display: block;
+      margin: 8px auto;
+      width: 100%;
+      background-size: 35px;
+      background-position: center;
+    }
+
+  }
+  .season, .location {
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    font-weight: 500;
+    color: transparentize($color-white, 0.75);
+  }
+  .season {
+    float: left;
+    margin-left: 5%;
+  }
+  .location {
+    float: right;
+    margin-right: 5%;
   }
 }
 .today {
